--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
